# torchctrnn

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: run_tests.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/tutorials/: data-simulations.ipynb  feature-engineering.ipynb  time-series-classification-sine-waves.ipynb
examples/: sine-wave-classification.ipynb  time-dependent-vector-space.ipynb
test/: tmp.py
tests/: run_tests.py  test_flow.py  test_odenet.py  test_odernn.py  test_odernnbase.py  test_simulations.py
torchctrnn/: __init__.py
torchctrnn/core/: ___base.py  ___cde.py  ___ctrnn.py  ___odernn.py  base.py  cde.py  ctrnn.py  flownet.py  flowrnn.py  imode.py  jump.py  odenet.py  odernn.py  rnn.py  solve.py  utils.py
torchctrnn/core/.ipynb_checkpoints/: base-checkpoint.py  rnn-checkpoint.py
torchctrnn/data/: simulations.py  utils.py
torchctrnn/nn/: imode.py  jump.py  rnn.py
tutorials/: data-simulations.ipynb  solving-an-ode.ipynb  time-series-classification-sine-waves.ipynb  time-series-forecasting.ipynb
tutorials/experiments/: test.ipynb
