[tool.poetry]
name = "torchctrnn"
version = "0.1.0"
description = "A PyTorch library dedicated to continuous time recurrent neural networks"
authors = ["Oisin Fitzgerald <o.fitzgerald@unsw.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torchdiffeq = "0.2.2"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
