[tool.poetry]
name = "torchctrnn"
version = "0.0.3"
description = "A PyTorch library dedicated to continuous time recurrent neural networks"
authors = ["Oisin Fitzgerald <o.fitzgerald@unsw.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torchdiffeq = "0.2.2"
torch = "^1.11.0"
numba = "^0.55.1"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
sklearn = "^0.0"
numpy = "^1.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
nbmake = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
